# Micromechanics-Proj-Math-Eng

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Plan.txt  README.md  Test.txt
Demo/: demo.cpp
Input/: test.in
Lib/eigen-3.4.0/: .gitignore
Lib/fftw-3.3.10/: FFTW3Config.cmake  config.h  fftw3.pc
Output/: test.out
Prototype/: MicroMechProto.py  functions.py  micromechanics_andreas.py  micromechanics_zirui.py
Src/: IO.hpp  main.cpp  micromechanics.hpp  types.hpp  visualization.py
Test/: IO_test.cpp  algorithmTest.cpp  algorithm_test.cpp
